fixed overflow phone

--- a/src/components/download/Download.css
+++ b/src/components/download/Download.css
@@ -1,4 +1,5 @@
 #download{
+    overflow-x: hidden;
     background: rgb(62,151,207);
     background: linear-gradient(110deg, rgba(62,151,207,1) 60%, rgba(14,251,255,1) 98%); 
     height: auto;
