--- a/src/components/faq/Faq.css
+++ b/src/components/faq/Faq.css
@@ -1,4 +1,5 @@
 .faq{
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
     display: flex;
