--- a/src/components/features/Features.css
+++ b/src/components/features/Features.css
@@ -1,4 +1,5 @@
 #features{
+    overflow-x: hidden;
     background-color: #fff;
     margin-bottom: 4rem;
 }
