--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,5 @@
 #footer{
+    overflow-x: hidden;
     margin: 0;
     width: 100%;
     background-color: #133771f4;
