--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,5 @@
 .header{
+    overflow-x: hidden;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
